--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
         
+      - name: fix some problems
+        run: ./gradlew :velocity-proxy:spotlessApply
+        
       - name: Build with Gradle
         run: ./gradlew clean shadowJar --no-daemon
         
